fix minor website bugs #338
-fix spelling mistakes
-stop header navigation bar from overlapping content
-fix links to Guy Leonard
-add paragraph: systemd autostart

--- a/css/seqserv.css
+++ b/css/seqserv.css
@@ -3,8 +3,6 @@ body {
   font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
   position: relative;
   padding-top: 70px;
-  letter-spacing: .02em;
-  word-spacing: .01em;
   font-size: 16px !important;
 }
 
